# internal/presentation/user/request.go
@@ -8,3 +8,20 @@ type CreateUserRequest struct {
 	LastName  *string `json:"last_name,omitempty"`
 	Email     *string `json:"email,omitempty" validate:"omitempty,email"`
 }
+
+// UpdateUserProfileRequest はユーザープロフィール更新のリクエスト
+type UpdateUserProfileRequest struct {
+	Name        *string `json:"name,omitempty"`
+	Description *string `json:"description,omitempty"`
+	FirstName   *string `json:"first_name,omitempty"`
+	LastName    *string `json:"last_name,omitempty"`
+}
+
+// UpdateUserLocationRequest はユーザー位置情報更新のリクエスト
+type UpdateUserLocationRequest struct {
+	Locality           *string `json:"locality,omitempty"`
+	AdministrativeArea *string `json:"administrative_area,omitempty"`
+	CountryCode        *string `json:"country_code,omitempty"`
+	PostalCode         *string `json:"postal_code,omitempty"`
+	Geom               string  `json:"geom" validate:"required"`
+}
